kustomizations/streaming/apps/stremio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stremio
spec:
  rules:
  - host: stremio.lan
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stremio
            port:
              number: 11470
